--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-*{
+* {
     padding: 0;
     margin: 0;
     font-family: Helvetica, sans-serif;
 }
 
-body{
-    background: linear-gradient(to right, #aa7e66,#feb47b);
+body {
+    background: linear-gradient(to right, #aa7e66, #feb47b);
 }
 
-.container{
+.container {
     width: 600px;
     margin: 100px auto;
     background-color: #f5f5f5;
@@ -17,23 +17,23 @@ body{
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-h1{
+h1 {
     text-align: center;
     color: #333;
 }
 
-.form-group{
+.form-group {
     margin-bottom: 20px;
 }
 
-label{
+label {
     display: block;
     margin-bottom: 5px;
     color: #333;
     font-weight: 600;
 }
 
-input[type="text"]{
+input[type="text"] {
     width: 95%;
     padding: 10px;
     font-size: 16px;
@@ -41,7 +41,7 @@ input[type="text"]{
     border: 1px solid #ccc;
 }
 
-button{
+button {
     padding: 10px 20px;
     font-size: 16px;
     background-color: #aa7e66;
@@ -50,9 +50,22 @@ button{
     border-radius: 4px;
     color: #fff;
     cursor: pointer;
+    margin-right: 10px;
 }
 
-.result-container{
+button:hover {
+    background-color: #8e6653;
+}
+
+#resetBtn {
+    background-color: #777;
+}
+
+#resetBtn:hover {
+    background-color: #555;
+}
+
+.result-container {
     display: none;
     margin-top: 20px;
     background-color: #fff;
@@ -61,18 +74,17 @@ button{
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 }
 
-.result{
+.result {
     margin-top: 10px;
 }
 
-
-.result h3{
+.result h3 {
     color: #333;
     font-size: 18px;
     margin-bottom: 10px;
 }
 
-.result p{
+.result p {
     font-size: 15px;
     margin-bottom: 10px;
 }
